--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+    </div>
 
 <!--<button id="clearStorage">ClearStorage</button>-->
 <script src="main.js"></script>
